kubernetes/apps/vpn/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vpn
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    routed-gateway: "true"
