kubernetes/apps/vpn/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vpn-policy
  namespace: vpn
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - to:
        - ipBlock:
          cidr: 10.42.0.0/15
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 501
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 10.42.0.0/15
